=== Version 0.8.6
* Fixes
  * Fixed issue with generic element calls

=== Version 0.8.5 / 2013-2-21
* Enhancements
  * Updated to use the latest selenium-webdriver 2.30 - support for Firefox 19

=== Version 0.8.4 / 2013-1-26
* Enhancements
  * Extracted navigational methods into new gem named page_navigation

=== Version 0.8.3 / 2013-1-22
* Enhancements
  * Updated to use the latest selenium-webdriver 2.29
  * Added :using_params parameter to both on_page and if_page methods
* Fixes
  * Fixed issue where has_expected_title? displays misleading error message (X Zhang)
  * Fixed issue when getting basic Element element when using Selenium
  * Fixed issue when using plural class methods multiple times on same object

=== Version 0.8.2 / 2013-1-13
* Enhancements
  * Updated expected_element to ue the global default element wait by default
  * Updated routes to accept more than two entries in the array which are passed as arguments
  * Added new generated method for select_list to return options -> <name>_options (X Zhang)
  * Added scroll_into_view method to Element
  * Added *_element and *_elements methods to PageObject and Element for the following types
    * addr
    * address
    * article
    * aside
    * bdi
    * bdo
    * cite
    * code
    * dd
    * dfn
    * dt
    * em
    * figcaption
    * figure
    * footer
    * header
    * hgroup
    * kbd
    * mark
    * nav
    * noscript
    * rp
    * rt
    * ruby
    * samp
    * section
    * sub
    * summary
    * sup
    * var
    * wbr

=== Version 0.8.1 / 2012-12-28
* Fixes
  * Fixed issue when calling new multi-element class methods using a block

=== Version 0.8 / 2012-12-22
* Enhancements
  * Added the following class level methods to return all elements matching the locator
    * divs
    * buttons
    * text_fields
    * hidden_fields
    * text_areas
    * select_lists
    * links
    * checkboxes
    * radio_buttons
    * spans
    * tables
    * cells
    * images
    * forms
    * list_items