@@ -54,6 +54,10 @@
       Your browser does not support the video tag.
     </video>
     
+    <svg width="100" height="100" id="the_svg">
+      <circle cx="50" cy="50" r="40" fill="red" stroke="blue" stroke-width="5" />
+    </svg>    
+
     <a href="success.html" id="link_id" name="link_name" class="link_class" title="link_title">Google Search</a>
 
     <input id="cb_id" name="cb_name" class="cb_class" type="checkbox" value="1"/>
