@@ -351,5 +351,6 @@ class Page
   element(:summary_id, :summary, :id => 'summary_id')
   element(:details_id, :details, :id => 'details_id')
 
+  svg(:svg_id, :id => 'the_svg')
 end
 
